load posts and like functionality

--- a/src/components/PostCard/postcard.css
+++ b/src/components/PostCard/postcard.css
@@ -33,6 +33,10 @@
 .post-content {
   flex: auto;
 }
+.post-btn {
+  display: flex;
+  align-items: center;
+}
 .post-btn:hover {
   cursor: pointer;
 }
