--- a/src/components/SidebarLeft/sidebarleft.css
+++ b/src/components/SidebarLeft/sidebarleft.css
@@ -2,9 +2,26 @@
   height: 90vh;
   text-align: center;
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
   border: solid 1px var(--secondary-color);
   border-top: none;
   flex-basis: 150rem;
+  gap: 2rem;
+}
+.user-obj {
+  padding: 0.5rem;
+  color: var(--bg-color);
+  background-color: var(--secondary-color);
+  border-radius: 0.5rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.users-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
 }
