--- a/src/pages/Homepage/homepage.css
+++ b/src/pages/Homepage/homepage.css
@@ -4,10 +4,12 @@
   justify-content: space-between;
 }
 .home-page-container {
-  margin: auto;
+  /* margin: auto;
   text-align: center;
   width: 80vw;
   display: flex;
   align-items: flex-start;
-  justify-content: space-evenly;
+  justify-content: space-evenly; */
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
 }
