--- a/src/components/PostCard/postcard.css
+++ b/src/components/PostCard/postcard.css
@@ -22,10 +22,39 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  flex-direction: column;
   font-size: 1.5rem;
+}
+.comments-section {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 0.5rem;
+}
+.comment-content {
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  font-size: 1rem;
+}
+.post-buttons {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 .post-options-btn {
   font-size: 1.5rem;
+}
+.options {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 .profile-data {
   display: flex;
@@ -44,13 +73,38 @@
 .post-btn:hover {
   cursor: pointer;
 }
+.comment-dp {
+  font-size: 0.8rem;
+}
+.comment-buttons {
+  padding-left: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+}
+.comment-vote-btn {
+  color: white;
+  padding: 0.2rem;
+  border: none;
+  background-color: var(--secondary-color);
+  border-radius: 0.2rem;
+}
+.comment-vote-btn:hover {
+  cursor: pointer;
+}
+.bookmark-icon:hover {
+  cursor: pointer;
+}
 .comment-container {
-  padding-right: 2rem;
-  padding-left: 2rem;
+  background-color: var(--hover-color);
+  border-radius: 1rem;
+  color: var(--bg-color);
+  padding: 1rem;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  flex-direction: column;
+  flex-direction: row;
+  gap: 1rem;
 }
 .profile-pic-letters {
   padding: 1rem;
