--- a/src/components/SidebarLeft/sidebarleft.css
+++ b/src/components/SidebarLeft/sidebarleft.css
@@ -1,4 +1,5 @@
 .sidebar {
+  padding-top: 2rem;
   height: 90vh;
   text-align: center;
   display: flex;
@@ -23,5 +24,10 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  gap: 1rem;
+}
+.sidebar-nav-btn {
+  display: flex;
+  align-items: center;
   gap: 1rem;
 }
