--- a/src/pages/MyFeed/myfeed.css
+++ b/src/pages/MyFeed/myfeed.css
@@ -24,3 +24,7 @@
   color: var(--bg-color);
   background-color: var(--secondary-color);
 }
+.selected {
+  color: var(--bg-color);
+  background-color: var(--secondary-color);
+}
