added text decoration and hover for clickable profiles

--- a/src/components/PostCard/postcard.css
+++ b/src/components/PostCard/postcard.css
@@ -113,3 +113,10 @@
   border-radius: 2rem;
   background-color: var(--secondary-color);
 }
+.profile-pic-letters:hover {
+  cursor: pointer;
+}
+.username-holder:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
