--- a/src/components/SideBarRight/sidebarright.css
+++ b/src/components/SideBarRight/sidebarright.css
@@ -1,3 +1,14 @@
 .right-sidebar {
   box-shadow: -2px 2px 1px 1px var(--secondary-color);
 }
+.user-name:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+.user-obj {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+}
